[gd_scene load_steps=11 format=3 uid="uid://tuhyfaf8tq1a"]

[ext_resource type="Script" path="res://scripts/wisp.gd" id="1_pejbm"]
[ext_resource type="Texture2D" uid="uid://dt2nasn3gd6ss" path="res://assets/images/wisp.png" id="2_h26gr"]
[ext_resource type="FontFile" uid="uid://dma2fo7yc01mb" path="res://assets/misc/Geist-Regular.ttf" id="3_fhhh4"]
[ext_resource type="StyleBox" uid="uid://bwvbrshh8ilyo" path="res://assets/themes/ui_panel.tres" id="3_frqr7"]

[sub_resource type="Gradient" id="Gradient_1bs6y"]
offsets = PackedFloat32Array(0, 0.222222, 0.555556, 0.760943, 1)
colors = PackedColorArray(0.321569, 0.819608, 0.819608, 1, 0.108947, 0.366633, 0.475662, 0.918824, 0.0553987, 0.226457, 0.289411, 0.870588, 1.95531e-08, 0.0263823, 0.077499, 0.8, 0, 0, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_uxfx4"]
gradient = SubResource("Gradient_1bs6y")
width = 128
height = 128
fill = 1
fill_from = Vector2(0.5, 0.5)
fill_to = Vector2(0.8, 0.8)

[sub_resource type="CircleShape2D" id="CircleShape2D_agxcm"]
radius = 56.0357

[sub_resource type="LabelSettings" id="LabelSettings_1u810"]
font = ExtResource("3_fhhh4")
font_size = 22

[sub_resource type="LabelSettings" id="LabelSettings_p58i1"]
line_spacing = -4.0
font = ExtResource("3_fhhh4")
font_size = 18

[sub_resource type="LabelSettings" id="LabelSettings_1thox"]
line_spacing = -4.0
font = ExtResource("3_fhhh4")
font_size = 22

[node name="Wisp" type="Area2D"]
script = ExtResource("1_pejbm")
type = "wisp"

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.125, 0.125)
texture = ExtResource("2_h26gr")

[node name="PointLight2D" type="PointLight2D" parent="Sprite2D"]
scale = Vector2(4, 4)
texture = SubResource("GradientTexture2D_uxfx4")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_agxcm")

[node name="Panel" type="Panel" parent="."]
visible = false
z_index = 5
offset_left = -128.0
offset_top = -160.0
offset_right = 128.0
offset_bottom = -32.0
theme_override_styles/panel = ExtResource("3_frqr7")

[node name="NameLabel" type="Label" parent="Panel"]
layout_mode = 0
offset_left = 8.0
offset_top = 5.0
offset_right = 241.0
offset_bottom = 38.0
text = "Placeholder"
label_settings = SubResource("LabelSettings_1u810")
text_overrun_behavior = 1

[node name="MessageLabel" type="Label" parent="Panel"]
layout_mode = 0
offset_left = 10.0
offset_top = 39.0
offset_right = 244.0
offset_bottom = 89.0
text = "Goober placeholder message..."
label_settings = SubResource("LabelSettings_p58i1")
autowrap_mode = 3
text_overrun_behavior = 1

[node name="BlessingLabel" type="Label" parent="Panel"]
layout_mode = 0
offset_left = 4.0
offset_top = 95.0
offset_right = 253.0
offset_bottom = 131.0
text = "Blessing o' Speed"
label_settings = SubResource("LabelSettings_1thox")
horizontal_alignment = 1
autowrap_mode = 3
text_overrun_behavior = 1
